- resolve size of the buttons -make separator color visible in menu

--- a/src/components/basket/basket.scss
+++ b/src/components/basket/basket.scss
@@ -13,6 +13,10 @@
 
 .action-buttons {
   height: 65px;
+  button {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
 }
 
 .top-component {
